blogs/eks-canary-deployments-pipeline/microservices/yelb-ui/specfiles/kubernetes_template.yml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: ${MICROSERVICE_NAME}
  namespace: ${KUBERNETES_NAMESPACE}
spec:
  awsName: ${MICROSERVICE_NAME}
  provider:
    virtualNode:
      virtualNodeRef:
        name: ${MICROSERVICE_NAME}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${KUBERNETES_NAMESPACE}
  name: ${MICROSERVICE_NAME}-${CANARY_VERSION}
  labels:
    app: ${MICROSERVICE_NAME}
    version: "${CANARY_VERSION}"
    tier: frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
  selector:
    app: ${MICROSERVICE_NAME}
    version: "${CANARY_VERSION}"
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${KUBERNETES_NAMESPACE}
  name: ${MICROSERVICE_NAME}-${CANARY_VERSION}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${MICROSERVICE_NAME}
      version: "${CANARY_VERSION}"
      tier: frontend
  template:
    metadata:
      labels:
        app: ${MICROSERVICE_NAME}
        version: "${CANARY_VERSION}"
        tier: frontend
    spec:
      containers:
        - name: ${MICROSERVICE_NAME}
          image: ${CONTAINER_IMAGE}
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${KUBERNETES_NAMESPACE}
  name: ${MICROSERVICE_NAME} # used to provide a DNS entry for ${MICROSERVICE_NAME} VS
spec:
  ports:
    - port: 80
      name: http
